--- a/sensum/package.json
+++ b/sensum/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "gulp watch"
+    "start": "gulp watch"
   },
   "keywords": [],
   "author": "",
